--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </svg>
               </a>
               <a href="#contact" class="inline-flex items-center gap-2 rounded-xl bg-accent-500 px-4 py-2 font-medium text-ink-900 hover:bg-accent-400 transition-all duration-300 hover:scale-105 hover:shadow-lg hover:shadow-accent-500/25">Hubungi Saya</a>
-              <a href="https://drive.google.com/file/d/1r03v1T1J_43RPKefrhDeDrzJesvWn_S3/view?usp=sharing" target="_blank" class="inline-flex items-center gap-2 rounded-xl border border-white/10 px-4 py-2 hover:bg-white/5 transition-all duration-300 hover:scale-105">
+              <!-- <a href="https://drive.google.com/file/d/1r03v1T1J_43RPKefrhDeDrzJesvWn_S3/view?usp=sharing" target="_blank" class="inline-flex items-center gap-2 rounded-xl border border-white/10 px-4 py-2 hover:bg-white/5 transition-all duration-300 hover:scale-105"> -->
                 Download CV
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="transition-transform group-hover:translate-y-1">
                   <path d="M12 3v12m0 0l-4-4m4 4l4-4M4 21h16" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
@@ -607,7 +607,7 @@
                 </a>
                 <a href="https://www.linkedin.com/in/" target="_blank" class="contact-card">
                   <div class="text-sm text-slate-400">LinkedIn</div>
-                  <div class="text-lg font-medium">/in/hanifmutaz</div>
+                  <div class="text-lg font-medium">/in/eaa</div>
                 </a>
               </div>
               <form class="mt-6 grid gap-3" action="mailto:hanifmutaz@gmail.com" method="post" enctype="text/plain">
